fix: Text align to the left

--- a/assets/sass/_sidebar.scss
+++ b/assets/sass/_sidebar.scss
@@ -24,7 +24,7 @@ div .sidebar {
 		#profile-bio {
 			color: $text-color;
 			margin: 0.2rem 0;
-			text-align: justify;
+			text-align: left;
 			font-size: $base-font-size-small;
 		}
 
